{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 29,
  "lineage": "ee7d3cce-e980-5e4a-cc89-81d1bc51c1ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "strapi_ec2_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:279205476500:instance/i-0b82a0e48fe482a1e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b82a0e48fe482a1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mane2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09edc565218398e43"
              }
            ],
            "primary_network_interface_id": "eni-09edc565218398e43",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.48",
            "public_ip": "107.23.125.121",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03613a36a5955d348",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0990183eca51711d1",
            "tags": {
              "Name": "StrapiEC2_2"
            },
            "tags_all": {
              "Name": "StrapiEC2_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050466467e9404d10"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_route_table.strapi_rt",
            "aws_route_table_association.strapi_rta",
            "aws_security_group.strapi_sg2",
            "aws_subnet.strapi_subnet",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "strapi_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279205476500:internet-gateway/igw-0f976a192181853f0",
            "id": "igw-0f976a192181853f0",
            "owner_id": "279205476500",
            "region": "us-east-1",
            "tags": {
              "Name": "StrapiIGW"
            },
            "tags_all": {
              "Name": "StrapiIGW"
            },
            "vpc_id": "vpc-08524a38ea4a95d2a"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "strapi_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279205476500:route-table/rtb-01c96fdecc43b6cb1",
            "id": "rtb-01c96fdecc43b6cb1",
            "owner_id": "279205476500",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f976a192181853f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "StrapiRouteTable"
            },
            "tags_all": {
              "Name": "StrapiRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-08524a38ea4a95d2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "strapi_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02506756456b74e80",
            "region": "us-east-1",
            "route_table_id": "rtb-01c96fdecc43b6cb1",
            "subnet_id": "subnet-0990183eca51711d1"
          },
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_route_table.strapi_rt",
            "aws_subnet.strapi_subnet",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strapi_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279205476500:security-group/sg-050466467e9404d10",
            "description": "Allow SSH and Strapi port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050466467e9404d10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "strapi-sg2",
            "name_prefix": "",
            "owner_id": "279205476500",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "StrapiSG2"
            },
            "tags_all": {
              "Name": "StrapiSG2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08524a38ea4a95d2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "strapi_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279205476500:subnet/subnet-0990183eca51711d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0990183eca51711d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "279205476500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "StrapiSubnet"
            },
            "tags_all": {
              "Name": "StrapiSubnet"
            },
            "vpc_id": "vpc-08524a38ea4a95d2a"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "strapi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279205476500:vpc/vpc-08524a38ea4a95d2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05777db56e0b306cd",
            "default_route_table_id": "rtb-0d1f359e669ba5b25",
            "default_security_group_id": "sg-02aca7a46a6db41a6",
            "dhcp_options_id": "dopt-0d67fd9d14591ff67",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08524a38ea4a95d2a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1f359e669ba5b25",
            "owner_id": "279205476500",
            "region": "us-east-1",
            "tags": {
              "Name": "StrapiVPC"
            },
            "tags_all": {
              "Name": "StrapiVPC"
            }
          }
        }
      ]
    }
  ]
}